change question.proto
