# server/gatewaysvr/docs/swagger.json
@@ -46,6 +46,35 @@
                 }
             }
         },
+        "/question/get": {
+            "get": {
+                "description": "id获取完整题目内容",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "id获取完整题目内容",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "数据的ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/question/get/{id}": {
             "get": {
                 "description": "根据id获取题目",
@@ -253,6 +282,17 @@
                 }
             }
         },
+        "pb.Context": {
+            "type": "object",
+            "properties": {
+                "context": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "pb.GetQuestionVoPageRequest": {
             "type": "object",
             "properties": {
@@ -405,6 +445,9 @@
                 "code": {
                     "type": "string"
                 },
+                "ctx": {
+                    "$ref": "#/definitions/pb.Context"
+                },
                 "language": {
                     "type": "string"
                 },
@@ -416,6 +459,9 @@
         "pb.QuestionSubmitQueryRequest": {
             "type": "object",
             "properties": {
+                "ctx": {
+                    "$ref": "#/definitions/pb.Context"
+                },
                 "language": {
                     "type": "string"
                 },
